# tech4dev-hosm

./: .env.example  .gitmodules  Makefile  README.md  docker-compose.yml  lefthook.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.md  performance.md
.github/workflows/: checks.yml  deploy.yml  tests.yml
backend/: Dockerfile  Makefile  pyproject.toml  start.sh
backend/api/: config.py  db.py  main.py  utils.py
backend/api/models/: annotations.py  auth.py  images.py  map.py
backend/api/services/: annotations.py  auth.py  files.py  images.py
backend/api/views/: annotations.py  auth.py  files.py  images.py  map.py
backend/scripts/: generate_mock_data.py
backend/tests/: conftest.py  test_annotations.py  test_users.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  quasar.config.ts  tsconfig.typecheck.json
frontend/public/: datasets.json  env.js
frontend/src/: models.ts
frontend/src/assets/: tutorial-steps.json
frontend/src/boot/: annotorious.ts  api.ts  i18n.ts
frontend/src/components/: AboutDialog.vue  AnnotatedMap.vue  AnnotatedSidebar.vue  ExportDialog.vue  ImageDeleteConfirmDialog.vue  LanguageSelector.vue  LogosLine.vue  ReferenceMap.vue  TutorialDialog.vue
frontend/src/composables/: useDateFormat.ts
frontend/src/css/: app.scss  quasar.variables.scss
frontend/src/layouts/: AdminLayout.vue  LoginLayout.vue  MainLayout.vue  ReviewLayout.vue
frontend/src/pages/: AdminPage.vue  ErrorNotFound.vue  IndexPage.vue  LoginPage.vue  ReviewPage.vue
frontend/src/router/: index.ts  routes.ts
frontend/src/stores/: annotation-data.ts  auth.ts  dataset-images.ts  index.ts  users.ts
(+3 files in other folders)
