[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Son Pham-Ba", email = "son.phamba@epfl.ch" },
]
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "cachetools>=6.2.4",
    "fastapi>=0.128.0",
    "fastapi-cache2>=0.2.2",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "python-dotenv[cli]>=1.2.1",
]
test = [
    "pytest>=9.0.2",
]

[tool.setuptools]
packages = ["api"]

[tool.codespell]
skip = 'uv.lock'
