[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Son Pham-Ba", email = "son.phamba@epfl.ch" },
]
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "asyncssh>=2.22.0",
    "cachetools>=6.2.4",
    "Pillow>=12.1.1",
    "fastapi>=0.128.0",
    "fastapi-cache2>=0.2.2",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "opencv-python-headless>=4.12.0.88",
    "numpy>=2.2.6",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "python-dotenv[cli]>=1.2.1",
]

[tool.setuptools]
packages = ["api"]

[tool.codespell]
skip = 'uv.lock'

[tool.pytest.ini_options]
asyncio_mode = "auto"
